--- a/.gitconfig
+++ b/.gitconfig
@@ -80,10 +80,12 @@
 	}; f"
 
 	# https://adamcod.es/2014/12/10/git-pull-correct-workflow.html
-	update-from = "!f() { git fetch $1 --prune; git merge --ff-only $1/$2 || git rebase --preserve-merges $1/$2; }; f"
+	update-from = "!f() { git fetch $1 --prune; git merge --ff-only $1/$2 || git rebase --rebase-merges $1/$2; }; f"
 
   # https://developer.atlassian.com/blog/2015/04/force-with-lease/
 	pushf = "push --force-with-lease"
+
+	permission-reset = !git diff -p -R --no-color | grep -E \"^(diff|(old|new) mode)\" --color=never | git apply
 
 [apply]
 
