--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,3 +23,7 @@ jobs:
         run: brew install bats-core
       - name: Run tests
         run: bats tests
+      - name: Install dependencies for defaults check
+        run: pip3 install requests
+      - name: Check macOS defaults compatibility
+        run: ./bin/check-macos-defaults.py .macos Sonoma
